# StreamSniper

./: .gitignore  README.md  functions.py  gui.py  pyproject.toml  requirements.txt  run.py
streamsniper/: app.py  config.py  downloader.py  theme.py  widgets.py
streamsniper/tabs/: download_tab.py  history_tab.py  settings_tab.py
